feat(#5358): add native variable-length Cypher expansion (#6484)
Co-authored-by: robfrank <ro.franchini@gmail.com>
(cherry picked from commit 17e5ef725ad0eb48bc80f4c319171ea8ab52a1b4)